--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/MarcoYuen17/UBC-Course-Availability-Checker#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.10"
+    "mongoose": "^5.11.10",
+    "puppeteer": "^5.5.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   }
 }
